2006-10-24  Tatsuya BIZENN  <bizenn@arthub.net>

	* Change plugins/fileio.scm:
	  Now open-uploaded-file can take keyword arguments like
	  open-input-file.

	* Add kahua.persistent.efs (Extended File System database).
	  Use "efs:path-to-db".

2006-10-20  Tatsuya BIZENN  <bizenn@arthub.net>

	* Fix a bug: class redefinition did not work on some
	  situations.

	* Add support to kahua-dbutil that check and fix fsdb.
	  You must do:
	  % kahua-dbutil fix path-to-db
	  in order to use current version of Kahua.

	* Add %%alive directory under each class directory.
	  It holds symlinks to alive(not removed) instance files.
	  So now fsdb is not compatible with a past one.

2006-10-08  Tatsuya BIZENN  <bizenn@arthub.net>

	* Drop cvs command support from kahua-admin command.

	* Drop user mode support.
	  You should use site bundle support instead of it.

	* Site bundle supported.
	  Site bundle is a directory structure including working directory,
	  application directory, plugin directory, and sockbase and etc and
	  tmp directory. Now a kahua-spvr process run on a site bundle.

	  Site Bundle default directory structure:
	    <site-bundle-root>/
	    <site-bundle-root>/app/
	    <site-bundle-root>/app-servers
	    <site-bundle-root>/database/
	    <site-bundle-root>/etc/
	    <site-bundle-root>/etc/kahua.conf
	    <site-bundle-root>/etc/user.conf
	    <site-bundle-root>/logs/
	    <site-bundle-root>/plugins/
	    <site-bundle-root>/socket/
	    <site-bundle-root>/static/
	    <site-bundle-root>/tmp/

	  All command scripts recognize -S <path-to-site> command line option,
	  and if -S option not specified and environment variable
	  "KAHUA_DEFAULT_SITE" exists, the command use value of "KAHUA_DEFAULT_SITE"
	  as site bundle path.

2006-09-29  Tatsuya BIZENN  <bizenn@arthub.net>

	* 0.7 released.

	* doc/Scripts/*: Update
	  Fit them to recently changes.

2006-09-28  Tatsuya BIZENN  <bizenn@arthub.net>
